Fixed small spacing bug

--- a/Static/style.css
+++ b/Static/style.css
@@ -27,8 +27,9 @@ a{
     margin-right: 20px;
 }
 
-#head{
+.head{
     font-size: 9vh;
+    margin-right: 50px;
 }
 
 .icon{
